rust_writer_procedural/tests/ui/parse_attrs_fails_if_attr_key_not_called_local.stderr
error: Expected 'local' as key.
 --> tests/ui/parse_attrs_fails_if_attr_key_not_called_local.rs:5:60
  |
5 | #[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, invalid = path)]
  |                                                            ^^^^^^^
